--- a/index.html
+++ b/index.html
@@ -973,15 +973,15 @@
             <div class="about-features fade-in">
                 <div class="about-feature">
                     <div class="feature-icon">👶</div>
-                    <div class="feature-text">الحضانة</div>
+                    <div class="feature-text">براعم</div>
                 </div>
                 <div class="about-feature">
                     <div class="feature-icon">🎈</div>
-                    <div class="feature-text">رياض الأطفال (KG)</div>
+                    <div class="feature-text">رياض الأطفال (KG1)</div>
                 </div>
                 <div class="about-feature">
                     <div class="feature-icon">📚</div>
-                    <div class="feature-text">المستوى التمهيدي</div>
+                    <div class="feature-text">(KG2) التمهيدي</div>
                 </div>
             </div>
         </div>
@@ -1157,7 +1157,7 @@
                         <h3>العنوان</h3>
                         <p>
                             عمان - حي الوفاء<br>
-                            شارع سليمان مفلح الروبضان
+                           ........ شارع    
                         </p>
                     </div>
                 </div>
@@ -1167,7 +1167,7 @@
                         <h3>ساعات العمل</h3>
                         <p>
                             الأحد - الخميس<br>
-                            8:00 صباحاً - 2:00 مساءً
+                            7:30 صباحاً - 3:00 مساءً
                         </p>
                     </div>
                 </div>
