--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
             <div class="about-features fade-in">
                 <div class="about-feature">
                     <div class="feature-icon">👶</div>
-                    <div class="feature-text">براعم</div>
+                    <div class="feature-text">براعم Pre School</div>
                 </div>
                 <div class="about-feature">
                     <div class="feature-icon">🎈</div>
